--- a/ASPFinalProjectNETCORE/appsettings.json
+++ b/ASPFinalProjectNETCORE/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-4DJPD0R;Initial Catalog=book-app-db;Integrated Security=True;Pooling=False"
+    "DefaultConnectionString": "Data Source=DESKTOP-4DJPD0R;Initial Catalog=app-book-db;Integrated Security=True;Pooling=False"
   },
   "AllowedHosts": "*"
 }
